Fix a parsing problem

--- a/src/content/posts/2024-09-05-Proton.md
+++ b/src/content/posts/2024-09-05-Proton.md
@@ -1,7 +1,8 @@
 ---
 date: 2024-09-05
 title: "Is Proton Unlimited Worth It?"
-description: "An overview of Proton Unlimited and why I think it's worth it."
+desc: "An overview of Proton Unlimited and why I think it's worth it."
+tags: [ "privacy", "cybersecurity", "email" ]
 monetized: true
 ---
 
